--- a/Python_Crawler.ipynb
+++ b/Python_Crawler.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/dbt/project_dev/.jupyter/projects\n"
+      "/home/XXX/.jupyter/projects\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
     "    baseurl = \"https://movie.douban.com/top250?start=\"  #要爬取的网页链接\n",
     "    # 1.爬取网页\n",
     "    datalist = getData(baseurl)\n",
-    "    savepath = \"/home/dbt/project_dev/.jupyter/projects/豆瓣电影Top250.xls\"    #当前目录新建XLS，存储进去\n",
+    "    savepath = \"/home/XXX/.jupyter/projects/豆瓣电影Top250.xls\"    #当前目录新建XLS，存储进去\n",
     "    # dbpath = \"movie.db\"              #当前目录新建数据库，存储进去\n",
     "    # 3.保存数据\n",
     "    saveData(datalist,savepath)      #2种存储方式可以只选择一种\n",
@@ -328,7 +328,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_excel(\"/home/dbt/project_dev/.jupyter/projects/豆瓣电影Top250.xls\")\n",
+    "data = pd.read_excel(\"/home/XXX/.jupyter/projects/豆瓣电影Top250.xls\")\n",
     "data.head()"
    ]
   },
@@ -408,15 +408,15 @@
     "        web = res.read().decode(\"gb2312\")\n",
     "        pat = re.compile(r'<a class=\"list-title\" target=\"_blank\" href=\".*?\">(.*?)</a>')\n",
     "        res1 = re.findall(pat, web)\n",
-    "        if os.path.exists(\"/home/dbt/project_dev/.jupyter/projects/热门游戏.txt\"): #这里是判断是否存在此文件，存在的话删掉\n",
-    "            os.remove(\"/home/dbt/project_dev/.jupyter/projects/热门游戏.txt\")\n",
+    "        if os.path.exists(\"/home/XXX/.jupyter/projects/热门游戏.txt\"): #这里是判断是否存在此文件，存在的话删掉\n",
+    "            os.remove(\"/home/XXX/.jupyter/projects/热门游戏.txt\")\n",
     "            for i in res1:\n",
     "                self.write_f(i)\n",
     "        else:\n",
     "            for i in res1:\n",
     "                self.write_f(i)\n",
     "    def write_f(self,content): #写入文件功能\n",
-    "            with open(\"/home/dbt/project_dev/.jupyter/projects/热门游戏.txt\", \"a\", encoding=\"utf-8\") as f:\n",
+    "            with open(\"/home/XXX/.jupyter/projects/热门游戏.txt\", \"a\", encoding=\"utf-8\") as f:\n",
     "                f.write(content + \"\\n\")\n",
     "\n",
     "    def start(self):\n",
@@ -427,7 +427,7 @@
     "    \n",
     "\n",
     "\n",
-    "with open(\"/home/dbt/project_dev/.jupyter/projects/热门游戏.txt\", \"r\") as f:  # 打开文件\n",
+    "with open(\"/home/XXX/.jupyter/projects/热门游戏.txt\", \"r\") as f:  # 打开文件\n",
     "    data = f.read()  # 读取文件\n",
     "    print(data)"
    ]
